discussion/kv_engine/170285/170285_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50543: Make Checkpoint::snapEndSeqno WeaklyMonotonic

This patch makes Checkpoint::snapEndSeqno WeaklyMonotonic to ensure we
never go backwards in history when trying to add modify a checkpoint's
range. We've chosen to use a WeaklyMonotonic semantic, as in some
cases we'll update the end seqno to the value it currently is.

This patch also add fixes to tests that incorrectly created checkpoints
or tried to add seqnos out of a checkpoints range.

Change-Id: I1de6a766d61b45fc88e481f6b76175ce5bdd876e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2022-04-08 12:52:48.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-08 13:24:17.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45162/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kv_bucket.cc(1023): error C2660: "CheckpointManager::createNewCheckpoint": function does not take 1 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45162/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37936/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kv_bucket.cc:1023:52:
error: too many arguments to function call, expected 0, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37936/ )

CMake error: CMakeLists.txt:134 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37936/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16570/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:1023:52: error: too many arguments to function call, expected 0, have 1 [clang-diagnostic-error]
        vb->checkpointManager->createNewCheckpoint(true);
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.h:401:5: note: "createNewCheckpoint" declared here
    uint64_t createNewCheckpoint();
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/collections/vbucket_manifest_test.cc:1123:58: error: too many arguments to function call, expected 0, have 1 [clang-diagnostic-error]
    manifest.vbR->checkpointManager->createNewCheckpoint(true);
                                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.h:401:5: note: "createNewCheckpoint" declared here
    uint64_t createNewCheckpoint();
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/collections/vbucket_manifest_test.cc:1147:58: error: too many arguments to function call, expected 0, have 1 [clang-diagnostic-error]
    manifest.vbR->checkpointManager->createNewCheckpoint(true);
                                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.h:401:5: note: "createNewCheckpoint" declared here
    uint64_t createNewCheckpoint();
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16570/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:1023:52:
error: too many arguments to function call, expected 0, have 1 [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16570/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6281/ : FAILURE

Compile error at [2022-04-08T12:59:39.094Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@2/kv_engine/engines/ep/src/kv_bucket.cc:1023:56:
error: no matching function for call to ?CheckpointManager::createNewCheckpoint(bool)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6281/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17437/ : FAILURE

Compile error at [2022-04-08T12:57:01.279Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kv_bucket.cc:1023:52:
error: too many arguments to function call, expected 0, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17437/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6222/ : FAILURE

Compile error at [2022-04-08T13:20:12.862Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kv_bucket.cc:1023:52:
error: too many arguments to function call, expected 0, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6222/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18341/ : FAILURE

Compile error at [2022-04-08T13:21:14.464Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master@2/kv_engine/engines/ep/src/kv_bucket.cc:1023:56:
error: no matching function for call to ?CheckpointManager::createNewCheckpoint(bool)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18341/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18675/ : FAILURE

Compile error at [2022-04-08T13:23:30.082Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kv_bucket.cc:1023:56:
error: no matching function for call to ?CheckpointManager::createNewCheckpoint(bool)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18675/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19372/ : FAILURE

Compile error at [2022-04-08T13:22:46.248Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kv_bucket.cc:1023:52:
error: too many arguments to function call, expected 0, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19372/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26749/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15501/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
